_sass/base/base.sass
@import url('https://fonts.googleapis.com/css?family=Karla:400,700')
+ion-font

*
  box-sizing: border-box

html
  text-rendering: optimizeLegibility
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
  line-height: 1.8
  +body-type
  color: $text

html, body
  min-height: 100%
  margin: 0
  padding: 0

html
  background: $tan

@media (max-width: 769px)
  html
    font-size: 13px

h1, h2, h3, p, ul, ol, blockquote
  margin-top: 1.5em
  margin-bottom: 1.5em

h1
  padding-top: 1em
  +heading-type
  font-size: ms(6)
  line-height: 1.2
  color: $black

  > b
    font-size: ms(3)
    display: block
    line-height: 1

h2
  padding-top: 1em
  +heading-type
  font-size: ms(4)
  line-height: 1.2
  color: $black
  margin-bottom: .5em
  margin-top: 1em

  > b
    font-size: ms(2)
    display: block
    line-height: 1

  @media (max-width: 768px)
    margin-top: 1
    padding-top: 0

h3
  margin-top: 3.5em
  margin-bottom: 1em
  color: $black
  font-size: ms(0) + (ms(1) - ms(0)) / 2
  +caps-type
  text-transform: uppercase
  letter-spacing: .1em
  padding-right: 20%

  & + p
    margin-top: -.8em

  @media (max-width: 768px)
    margin-top: 1.5em
    font-size: ms(1)
    margin-bottom: 0

    & + p
      margin-top: .5em

h4
  color: $black
  +caps-type
  font-size: ms(-1)
  @media (min-width: 769px)
    padding-right: 30%

.brief
  +subheading-type
  font-size: ms(3)
  color: darken($ecru, 30%)
  line-height: 1.3

a,
a:visited
  color: $copper
  font-weight: bold
  text-decoration: none

a:hover,
a:focus
  color: lighten($copper, 10%)

ul
  margin-left: 0
  padding-left: 2em

strong
  font-weight: bold
  color: $black

